syntax = "proto3";

package calculator;
option go_package="./pb";

// Unary
message SumRequest {
  float first_number = 1;
  float second_number = 2;
}
message ResultResponse {
  float result = 1;
}

// Server streaming
message PrimeNumberDecompositionRequest {
  int64 number = 1;
}
message PrimeNumberDecompositionResponse {
  int64 prime_factor = 1;
}

service CalculatorService {
  // Unary
  rpc Sum(SumRequest) returns (ResultResponse) {};
  // Server streaming
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}